force-app/main/default/objects/Payment_Order__c/Payment_Order__c.object-meta.xml
<CustomObject>
    <label>Payment Order</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Payment Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>