force-app/main/default/objects/Payment_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Orders</relationshipLabel>
    <relationshipName>Payment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>