force-app/main/default/objects/Payment_Order__c/fields/Address_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Street_2__c</fullName>
    <label>Address Street 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>