force-app/main/default/objects/Payment_Order__c/fields/Payment_amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_amount__c</fullName>
    <label>Payment amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>