force-app/main/default/objects/Payment_Order__c/listViews/Payment_Order_Pending_Approval_Payment_Order.listView-meta.xml
<ListView>
    <fullName>Payment_Order_Pending_Approval_Payment_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>Payment Order Pending Approval</label>
    <queue>Payment_Order_Pending_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>